# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

import("//foundation/distributeddatamgr/relational_store/relational_store.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store_deps.gni")

config("bundle_framework_config") {
  include_dirs = [
    "include",
    "include/bundlemgr",
  ]
}

ohos_source_set("bundle_framework") {
  configs = [ ":bundle_framework_config" ]
  sources = []
  all_dependent_configs = [ ":bundle_framework_config" ]
  public_configs = [ ":bundle_framework_config" ]
  deps = []
  deps += deps_hilog
  deps += deps_common_event_service
  external_deps = [
    "c_utils:utils",
    "json:nlohmann_json_static",
  ]
  external_deps += external_deps_hilog
  external_deps += external_deps_common_event_service
  part_name = "relational_store"
  subsystem_name = "distributeddatamgr"
}