# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store_deps.gni")

config("common_event_service_config") {
  include_dirs = [
    "include",
    "${relational_store_mock_external_kit_path}/ipc/include",
  ]
}

ohos_source_set("cesfwk_innerkits") {
  configs = [ ":common_event_service_config" ]
  sources = [ "mock_notification.cpp" ]
  all_dependent_configs = [ ":common_event_service_config" ]
  public_configs = [ ":common_event_service_config" ]
  deps = []
  external_deps = [ "c_utils:utils" ]
  part_name = "relational_store"
  subsystem_name = "distributeddatamgr"
}
