# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store_deps.gni")

config("file_api_config") {
  include_dirs = [
    "include",
    "include/uri"
  ]
}

ohos_source_set("securitylabel") {
  configs = [ ":file_api_config" ]
  sources = [
    "mock_file.cpp",
    "mock_filemanagement.cpp",
  ]
  all_dependent_configs = [ ":file_api_config" ]
  public_configs = [ ":file_api_config" ]
  deps = []
  deps += deps_ipc_core
  deps += deps_ability_base_zuri
  external_deps = [ "c_utils:utils" ]
  external_deps += external_deps_ipc_core
  external_deps += external_deps_ability_base_zuri
  part_name = "relational_store"
  subsystem_name = "distributeddatamgr"
}
